--- a/gw-ft232h/ftdi-usb-spi/Makefile
+++ b/gw-ft232h/ftdi-usb-spi/Makefile
@@ -1,8 +1,6 @@
-KDIR ?= /lib/modules/$(shell uname -r)/build
+KDIR ?= /lib/modules/$(KERNELRELEASE)/build
 BUILD_DIR:=$(shell pwd)
-# KBUILD_OPTIONS += CROSS_COMPILE=arm-linux- ARCH=arm
 
-include $(KDIR)/.config
 obj-m += spi-ft232h.o
 
 all: modules
@@ -11,4 +9,3 @@ modules:
 
 modules_install:
 	$(MAKE) -C $(KDIR) M=$$PWD modules_install
-
