--- a/nrc.conf
+++ b/nrc.conf
@@ -1,1 +1,1 @@
-options nrc fw_name=nrc/nrc7292_cspi.bin bd_name=nrc/nrc7292_bd.dat spi_polling_interval=5 spi_gpio_irq=-1
+options nrc fw_name=nrc/nrc7292_cspi.bin bd_name=nrc/nrc7292_bd.dat spi_polling_interval=500 spi_gpio_irq=-1
